--- a/src/index.pug
+++ b/src/index.pug
@@ -9,11 +9,9 @@ html(lang="en")
       script(src="https://code.angularjs.org/tools/system.js")
 
     //-link(href="./assets/styles/styles.css" type="text/css" rel="stylesheet")
+    //-script(src="https://sdk.amazonaws.com/js/aws-sdk-2.4.10.min.js")
     script(src="./app.js")
-    
-    link(href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,700,600italic,600,400italic,700italic,800,800italic" rel="stylesheet" type="text/css")
-    link(href="./assets/fonts/tap2care/css/tap2care.css" rel="stylesheet" type="text/css")
-      
+          
     //-if !isSfx
       script.
         System.import('src/test.js');
